--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 img {
@@ -11,6 +12,7 @@ img {
 
 body {
     font-family: monospace;
+    background: black;
 }
 
 .container {
@@ -25,19 +27,55 @@ body {
 
 .cabecalho__titulo {
     font-weight: 700;
-    color: black;
+    color: #f7e017;
     text-align: center;
     padding: 16px 0 10px;
 }
 
-.pagina__teaser {
-    padding: 12px;
-    margin: 0 auto;
-    max-width: 400px;
-    font-family: monospace;
-    font-size: 16px;
-    text-align: center;
+.topo {
+    margin-bottom: 48px;
 }
+
+/* CARTÃO 
+============================ */
+
+.cartao__flex-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.cartao {
+    box-shadow: 0px 6px 20px rgba(0,0,0,0.15);
+    max-width: 340px;
+    margin: 0 auto;
+    margin-bottom: 16px;
+    border-radius: 4px;
+    padding: 12px;
+    background: #252525;
+    flex-basis: 360px;
+}
+
+.cartao__tag-container {
+    margin: 6px 0 12px;
+}
+
+.cartao__tag {
+    color: white;
+}
+
+.cartao__link {
+    text-decoration: none;
+    font-size: 22px;
+    color: #f7e017;
+}
+
+.cartao__tempo {
+    color: fuchsia;
+}
+
+/* ========================= */
+
+
 
 .rodape__assinatura {
     padding-top: 24px;
@@ -46,7 +84,6 @@ body {
 
 @media (max-width: 400px){
     .cabecalho__titulo, 
-    .pagina__teaser,
     .rodape__assinatura {
         text-align: left;
         padding: 12px;
