--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,7 +12,7 @@ img {
 
 body {
     font-family: monospace;
-    background: black;
+    background: white;
 }
 
 .container {
@@ -27,7 +27,7 @@ body {
 
 .cabecalho__titulo {
     font-weight: 700;
-    color: #f7e017;
+    color: black;
     text-align: center;
     padding: 16px 0 10px;
 }
@@ -52,7 +52,7 @@ body {
     border-radius: 4px;
     padding: 12px;
     background: #252525;
-    flex-basis: 360px;
+    flex: 1 1 320px;
 }
 
 .cartao__tag-container {
@@ -66,7 +66,6 @@ body {
 .cartao__link {
     text-decoration: none;
     font-size: 22px;
-    color: #f7e017;
 }
 
 .cartao__tempo {
